[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
http-body-util = "*"
hyper-util = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
